@@ -3,6 +3,7 @@ package rayka.sos.service;
 import com.auth0.jwt.JWT;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.exceptions.JWTCreationException;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Service;
 import rayka.sos.model.Usuario;
 
@@ -12,13 +13,13 @@ import java.time.ZoneOffset;
 
 @Service
 public class TokenServiceJWT {
-    public String gerarToken(Usuario usuario) {
+    public String gerarToken(User user) {
         try {
             Algorithm algorithm = Algorithm.HMAC256("poo2");
             return JWT.create()
                     .withIssuer("API Service Order System")
-                    .withSubject(usuario.getName())
-                    .withClaim("ROLE", usuario.getAuthorities.stream().toList().get(0).toString())
+                    .withSubject(user.getUsername())
+                    .withClaim("ROLE", user.getAuthorities().stream().toList().getFirst().toString())
                     .withExpiresAt(dataExpiracao())
                     .sign(algorithm);
         } catch (JWTCreationException e) {
